--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,6 +23,9 @@
         <button type="submit" class="btn btn-primary">
           Submit
         </button>
+        <button type="button" class="btn btn-primary" onclick="window.location.href='/signup'">
+          Sign Up
+        </button>
       </form>
     </section>
   </div>
