--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,6 +33,8 @@
         <button type="submit" class="btn btn-primary">
           Submit
         </button>
+        <a href="/login" class="btn btn-primary my-2 mx-2">
+          Login</a>
       </form>
     </section>
   </div>
