--- a/views/publicProfile.ejs
+++ b/views/publicProfile.ejs
@@ -7,7 +7,7 @@
         <h4 class="profile-title">Profile</h4>
         <div class="d-flex flex-row justify-content-evenly">
           <div class="profile-pic-container">
-            <img class="profile-pic-image" src="<%= profile == undefined ? 'https://images.dog.ceo/breeds/shiba/shiba-13.jpg' : profile.image%>" alt="" />
+            <img class="profile-pic-image" src="<%= profile == undefined ? 'https://www.shareicon.net/data/256x256/2016/09/01/822751_user_512x512.png' : profile.image%>" alt="Profile picture" />
           </div>
           <div class="d-flex flex-column justify-content-center align-items-center">
             <p class="h2 fw-bold"><%= user.userName %></p>
