--- a/views/partials/logo.ejs
+++ b/views/partials/logo.ejs
@@ -1,6 +1,12 @@
 <div class="d-flex flex-column text-center">
   <a href="/profile">
-    <img class="logo-image" src="imgs/b.ubbas.png" alt="Binary Upload Boom Logo" />
+    <img
+      class="logo-image"
+      src="imgs/recipes-recipe-svgrepo-com.svg"
+      alt="Bubbas Recipes Logo"
+    />
   </a>
-  <p class="m-0 mt-2 text-bub">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+  <p class="m-0 mt-2 text-bub">
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+  </p>
 </div>
