--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,12 +2,18 @@
 
 :root {
   --bub-color: #000000;
-  --white: rgba(255, 255, 255, 0.937);
+  --white: rgb(255, 255, 255);
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 
 body {
   font-family: 'Roboto', sans-serif;
   background: #000000;
+  color: white;
 }
 
 html,
@@ -16,7 +22,6 @@ body,
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background: #000000;
 }
 
 .logo-image {
@@ -28,7 +33,7 @@ body,
   width: 200px;
   height: 200px;
   padding-bottom: 20px;
- 
+
 }
 
 .profile-pic-image {
@@ -40,11 +45,15 @@ body,
 }
 
 .btn {
-  min-width: 200px;
+
   margin-top: 1rem;
   margin-bottom: 1rem;
   font-family: 'PP Pangram Sans Rounded', Arial, Helvetica, sans-serif;
   background: #000000;
+}
+
+form.col-1:nth-child(3)>button:nth-child(1) {
+  margin: auto;
 }
 
 .post-card-container {
@@ -55,10 +64,13 @@ body,
   border-radius: 10px;
   background: #000000;
 }
-.fw-bold{
-  color: #4920ef;;
+
+.fw-bold {
+  color: #4920ef;
+  ;
   font-family: 'PP Pangram Sans Rounded', Arial, Helvetica, sans-serif;
 }
+
 .post-card {
   width: 800px;
   max-width: 90vw;
@@ -111,12 +123,14 @@ body,
 
 .navbar li {
   margin-left: 20px;
-  font-family: 'PP Pangram Sans Rounded','Roboto', 'Inter', Arial, Helvetica, sans-serif;
+  font-family: 'PP Pangram Sans Rounded', 'Roboto', 'Inter', Arial, Helvetica, sans-serif;
 }
-.mb-0{
+
+.mb-0 {
   font-family: 'PP Pangram Sans Rounded', 'Roboto', Arial, Helvetica, sans-serif;
-  
+
 }
+
 .text-bub {
   color: #E5C15B;
   font-family: 'PP Pangram Sans Rounded', 'Roboto', Arial, Helvetica, sans-serif;
@@ -125,7 +139,7 @@ body,
 
 .navbar img {
   width: 50px;
- 
+
 }
 
 .card {
@@ -135,11 +149,11 @@ body,
 
 .profile-title {
   background-color: var(--bub-color);
-  color: var(--white);
+  color: white;
   text-align: center;
   padding: 0.5rem 0;
-  font-family: 'PP Pangram Sans Rounded','Futura', 'Roboto', sans-serif;
-  
+  font-family: 'PP Pangram Sans Rounded', 'Futura', 'Roboto', sans-serif;
+
 }
 
 .likes-card {
@@ -147,6 +161,62 @@ body,
   background: #000000;
 
 }
+
+.bn30 {
+  margin: 2em auto;
+  border: 5em;
+  cursor: pointer;
+  outline: none;
+  font-size: 16px;
+  -webkit-transform: translate(0);
+  transform: translate(0);
+  background-image: linear-gradient(45deg, #4568dc, #b06ab3);
+  padding: 0.7em 2em;
+  border-radius: 65px;
+  box-shadow: .2% .2% 2% rgba(255, 255, 255, 0.438);
+  -webkit-transition: box-shadow 0.25s;
+  transition: box-shadow 0.25s;
+  color: white;
+}
+
+.bn30 .text {
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(45deg, #4568dc, #b06ab3);
+}
+
+.bn30:after {
+  content: "";
+  border-radius: 18px;
+  position: absolute;
+  margin: 2%;
+  top: 2%;
+  left: 2%;
+  bottom: 2%;
+  right: 2%;
+  z-index: -1;
+
+}
+
+.bn30:hover {
+  background-image: linear-gradient(-45deg, #4568dc, #b06ab3);
+  box-shadow: 0 4% 4% rgba(128, 128, 128, 0.1);
+}
+
+.bn30:hover .text {
+  background-image: linear-gradient(-45deg, #4568dc, #b06ab3);
+}
+
+div.col-6:nth-child(1)>form:nth-child(5)>input:nth-child(1) {
+  margin: 0.5em;
+}
+
+input {
+  background-color: rgb(255, 255, 255);
+  color: #000;
+}
+
 /*Media Query*/
 @media (max-width: 768px) {
   .navbar-container {
