--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,13 @@
 <%- include('partials/indexHeader') -%>
 
-<main class="container d-flex flex-column flex-sm-row justify-content-center align-items-center h-100 gap-5">
+<main
+  class="container d-flex flex-column flex-sm-row justify-content-center align-items-center h-100 gap-5"
+>
   <%- include('partials/logo') -%>
 
   <div class="d-flex flex-column align-items-stretch">
-    <a href="/login" class="btn btn-primary my-2 mx-2">
-      Login</a>
-    <a href="/signup" class="btn btn-primary my-2 mx-2">
-      Signup</a>
+    <a href="/login" class="bn30"> Login</a>
+    <a href="/signup" class="bn30"> Signup</a>
   </div>
 </main>
 
