--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/navbarHeader') -%>
+<script src="https://kit.fontawesome.com/bccb824f49.js" crossorigin="anonymous"></script>
 
 <div class="container">
   <div class="row justify-content-center mt-5">
@@ -13,14 +14,14 @@
         <h3 class="col-3">Likes: <%= post.likes %></h3>
         <%if(post.user._id == user.id){ %>
         <form action="/post/deletePost/<%= post.id %>?_method=DELETE" method="POST" class="col-3">
-          <button class="btn btn-primary fa fa-trash" type="submit"></button>
+          <button class="btn btn-primary fa-regular fa-trash-can" type="submit"></button>
         </form>
         <%}%>
       </div>
       <!-- form to submit comment -->
           <form action = "/comment/createComment/<%= post.id %>" method="POST">
         <input type="text" placeholder="Submit comment" name="comment">
-        <button type="submit">Submit</button>
+        <button class="bn30" type="submit">Submit</button>
         </form>
         <!--end of form -->
 
@@ -38,7 +39,7 @@
               <button class="btn btn-primary fa fa-heart" type="submit"></button>
             </form>
             <form class="col-1" action="/comment/deleteComment/<%= comments[i]._id %>?_method=DELETE" method="POST">
-              <button class="btn btn-primary fa fa-trash" type="submit"></button>
+              <button class="btn btn-primary fa-regular fa-trash-can" type="submit"></button>
             </form>
           </span>
           <p> _______________________________________________ </p>
@@ -54,8 +55,8 @@
       </div>
       </div>
       <div class="col-6 mt-5">
-        <a class="btn btn-primary" href="/profile">Return to Profile</a>
-        <a class="btn btn-primary" href="/feed">Return to Feed</a>
+        <a class="bn30" href="/profile">Return to Profile</a>
+        <a class="bn30" href="/feed">Return to Feed</a>
       </div>
     </div>
   </div>
