--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,8 @@
 <%- include('partials/indexHeader') -%>
 
-<main class="container d-flex flex-column flex-sm-row justify-content-center align-items-center h-100 gap-5">
+<main
+  class="container d-flex flex-column flex-sm-row justify-content-center align-items-center h-100 gap-5"
+>
   <%- include('partials/logo') -%>
   <div>
     <section class="mt-5">
@@ -13,28 +15,50 @@
       <form action="/signup" method="POST">
         <div class="mb-3">
           <label for="userName" class="form-label">User Name</label>
-          <input type="text" class="form-control" id="userName" name="userName" />
+          <input
+            type="text"
+            class="form-control"
+            id="userName"
+            name="userName"
+          />
         </div>
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" />
+          <label for="exampleInputEmail1" class="form-label"
+            >Email address</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="exampleInputEmail1"
+            aria-describedby="emailHelp"
+            name="email"
+          />
           <div id="emailHelp" class="form-text">
             We'll never share your email with anyone else.
           </div>
         </div>
         <div class="mb-3">
           <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password" name="password" />
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            name="password"
+          />
         </div>
         <div class="mb-3">
-          <label for="confirmPassword" class="form-label">Confirm Password</label>
-          <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" />
+          <label for="confirmPassword" class="form-label"
+            >Confirm Password</label
+          >
+          <input
+            type="password"
+            class="form-control"
+            id="confirmPassword"
+            name="confirmPassword"
+          />
         </div>
-        <button type="submit" class="btn btn-primary">
-          Submit
-        </button>
-        <a href="/login" class="btn btn-primary my-2 mx-2">
-          Login</a>
+        <button type="submit" class="bn30">Submit</button>
+        <a href="/login" class="bn30"> Login</a>
       </form>
     </section>
   </div>
