another possible bub icon fix

--- a/views/partials/navbarHeader.ejs
+++ b/views/partials/navbarHeader.ejs
@@ -29,10 +29,7 @@
       <div class="navbar-container container">
         <a class="link-light d-block" href="/feed">
           <div class="d-flex">
-            <img
-              src="public\imgs\recipes-recipe-svgrepo-com.svg"
-              alt="bub icon"
-            />
+            <img src="imgs/recipes-recipe-svgrepo-com.svg" alt="bub icon" />
           </div>
         </a>
         <ul>
