--- a/views/partials/logo.ejs
+++ b/views/partials/logo.ejs
@@ -7,6 +7,6 @@
     />
   </a>
   <p class="m-0 mt-2 text-bub">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    Store and share your favorite recipes with the world.
   </p>
 </div>
