--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -57,7 +57,9 @@
           </div>
           <div class="mb-3">
             <label for="caption" class="form-label">Recipe Entry</label>
+            <pre>
             <textarea class="form-control" id="caption" name="caption"></textarea>
+          </pre>
           </div>
           <div class="mb-3">
             <label for="imgUpload" class="form-label">Recipe Image</label>
